# ecliptix-protected-protocol

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CURRENT_SESSION_SUMMARY.md  IMPLEMENTATION_STATUS.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE3_PROGRESS.md  PORTING_PROGRESS.md  Package.swift  SESSION_SUMMARY.md  build-ios-simple.sh  build-xcframework-simple.sh
.github/workflows/: build-and-publish.yml  c-cpp.yml  mobile-packages.yml  nuget-publish.yml
bindings/android/: build-android.sh  build.gradle.kts  settings.gradle.kts
bindings/android/ecliptix-protocol/: build.gradle.kts  consumer-rules.pro
bindings/android/jni/: epp_jni.cpp
bindings/csharp/: README.md
bindings/csharp/EPP.Native/: NativeInterop.cs  SessionBindings.cs
bindings/csharp/Ecliptix.Protocol.Native/: EcliptixNativeInterop.cs  EcliptixProtocolSession.cs  EcliptixProtocolSystemWrapper.cs
bindings/swift/: README.md  build-ios.sh  build-xcframework.sh  update-package.sh
cmake/: EcliptixProtocolConfig.cmake.in
docs/: BUILD_TARGETS.md  C_API_REFERENCE.md  DOUBLE_RATCHET_ARCHITECTURE.md  ECLIPTIX_PROTOCOL_SPECIFICATION.md  HYBRID_RATCHET_IMPLEMENTATION.md  KYBER_INTEGRATION_PLAN.md  PQ_INTEGRATION_PLAN.md  PUNCTURABLE_DESIGN.md  RESEARCH_ROADMAP.md  SECURITY_AUDIT_2025.md  ZK_CIRCUIT_SPEC.md
examples/: CMakeLists.txt  basic_crypto_example.cpp
include/ecliptix/c_api/: ecliptix_c_api.h  ecliptix_server_c_api.h  epp_api.h  epp_server_api.h
include/ecliptix/configuration/: protocol_config.hpp  ratchet_config.hpp
include/ecliptix/core/: constants.hpp  failures.hpp  format.hpp  option.hpp  result.hpp
include/ecliptix/crypto/: aes_gcm.hpp  hkdf.hpp  kyber_interop.hpp  master_key_derivation.hpp  shamir_secret_sharing.hpp  sodium_interop.hpp  sodium_secure_memory_handle.hpp
include/ecliptix/debug/: key_logger.hpp
include/ecliptix/enums/: chain_step_type.hpp  key_exchange_type.hpp  pub_key_exchange_type.hpp
include/ecliptix/identity/: ecliptix_system_identity_keys.hpp  identity_keys.hpp
include/ecliptix/interfaces/: i_key_provider.hpp  i_protocol_event_handler.hpp  i_state_key_provider.hpp
include/ecliptix/models/: identity_key_bundle.hpp  identity_keys_material.hpp
include/ecliptix/protocol/: constants.hpp  ecliptix_protocol_system.hpp  handshake.hpp  nonce.hpp  protocol_system.hpp  session.hpp
include/ecliptix/utilities/: envelope_builder.hpp
nuget/: build-nuget.sh  nuget.config
nuget/EPP.Agent/: AgentNativeInterop.cs  EPP.Agent.csproj  README.md
nuget/EPP.Relay/: EPP.Relay.csproj  README.md  RelayNativeInterop.cs
nuget/Ecliptix.Protocol.Client/: Ecliptix.Protocol.Client.csproj  README.md
nuget/Ecliptix.Protocol.Client/src/: EcliptixNativeInterop.cs  EcliptixProtocolFailure.cs  EcliptixProtocolSystemWrapper.cs  Result.cs
nuget/Ecliptix.Protocol.Server/: Ecliptix.Protocol.Server.csproj  README.md
nuget/Ecliptix.Protocol.Server/src/: EcliptixNativeInterop.cs  EcliptixProtocolFailure.cs  EcliptixProtocolSystemWrapper.cs  Result.cs
nuget/shared/src/: AssemblyInfo.cs  Constants.cs  EcliptixNativeInterop.cs  EcliptixProtocolFailure.cs  NativeTypes.cs  ProtocolConstants.cs  ProtocolFailure.cs  ProtocolSystemConstants.cs  Result.cs  SodiumFailure.cs  Unit.cs  UtilityConstants.cs
proto/: CMakeLists.txt
proto/common/: secure_envelope.proto
proto/group/: group_state.proto
proto/protocol/: envelope.proto  handshake.proto  key_exchange.proto  protocol_state.proto  sealed_state.proto  state.proto
src/c_api/: ecliptix_c_api.cpp  ecliptix_server_c_api.cpp  epp_api.cpp  epp_common.cpp  epp_internal.hpp  epp_server_api.cpp
src/core/: failures.cpp
src/crypto/: aes_gcm.cpp  hkdf.cpp  kyber_interop.cpp  master_key_derivation.cpp  shamir_secret_sharing.cpp  sodium_interop.cpp  sodium_secure_memory_handle.cpp
src/identity/: ecliptix_system_identity_keys.cpp  identity_keys.cpp
src/models/bundles/: local_public_key_bundle.cpp
src/models/key_materials/: ed25519_key_material.cpp  ed25519_key_pair.cpp  signed_pre_key_material.cpp  signed_pre_key_pair.cpp  x25519_key_material.cpp  x25519_key_pair.cpp
src/models/keys/: one_time_pre_key.cpp  one_time_pre_key_local.cpp  one_time_pre_key_public.cpp  (+1 more)
src/protocol/: ecliptix_protocol_system.cpp  handshake.cpp  nonce.cpp  protocol_system.cpp  session.cpp
src/utilities/: envelope_builder.cpp
tests/: CMakeLists.txt  test_liboqs_kyber.cpp  test_main.cpp
tests/attacks/: test_envelope_attacks.cpp  test_replay_attacks.cpp
tests/benchmarks/: bench_crypto_performance.cpp
tests/boundaries/: test_state_transitions.cpp
tests/c_api/: test_c_api_boundary.cpp  test_c_api_break_in_recovery.cpp  test_c_api_forward_secrecy.cpp  test_c_api_handshake_e2e.cpp  test_c_api_hybrid_pq.cpp  test_c_api_integration.cpp  test_c_api_pre_handshake.cpp  test_c_api_role_validation.cpp  test_c_api_state_persistence.cpp  test_server_c_api_secret_sharing.cpp
tests/concurrency/: test_concurrent_envelopes.cpp
tests/fuzzing/: test_envelope_fuzzing.cpp
tests/helpers/: README.md  hybrid_handshake.hpp  mock_key_provider.hpp
tests/integration/: test_end_to_end_workflow.cpp  test_protocol_system_workflow.cpp
tests/interop/: DartConfiguration.tcl  ecliptix_tests-b12d07c_include.cmake  test_double_ratchet_vectors.cpp  test_x3dh_vectors.cpp
tests/performance/: test_envelope_performance.cpp
tests/security/: test_aes_gcm_attacks.cpp  test_hkdf_security.cpp  test_metadata_key_rotation.cpp  test_persistence_pq.cpp  test_rate_limiting.cpp  test_session_lifecycle.cpp
tests/unit/: test_aes_gcm.cpp  test_chain_step.cpp  test_connection.cpp  test_dh_validator.cpp  test_envelope_builder.cpp  test_group_models.cpp  test_identity_binding.cpp  test_kyber_interop.cpp  test_kyber_interop_comprehensive.cpp  test_metadata_key_agreement.cpp  test_protocol_config.cpp  test_ratchet_recovery.cpp  test_replay_protection.cpp  test_result.cpp  test_secret_sharing.cpp  test_secure_memory_handle.cpp  test_session_chain_length.cpp  test_session_replay_protection.cpp  test_session_state_hmac.cpp  test_session_state_mac.cpp  test_sodium_interop.cpp  test_state_import_invariants.cpp
(+64 files in other folders)
